--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "postinstall": "npm run build"
   },
   "dependencies": {
+    "babel": "^5.1.13",
     "debug": "^2.1.3",
-    "lodash": "^3.6.0",
+    "lodash": "^3.7.0",
+    "rimraf": "^2.3.2",
     "waterline": "^0.10.21"
   },
   "peerDependencies": {
@@ -21,9 +23,7 @@
     "swagger-express-middleware": "*"
   },
   "devDependencies": {
-    "babel": "^5.0.12",
-    "mocha": "^2.2.4",
-    "rimraf": "^2.3.2"
+    "mocha": "^2.2.4"
   },
   "author": "attn:",
   "repository": {
